2002-02-14  Ian Lance Taylor  <ian@airs.com>

	* John Hughes: uuconf.h (struct uuconf_system): Add
	uuconf_cmax_file_time field.
	* uuconf/syssub.c (SYSTEM_INTEGERS): Add cmax_file_time.
	* uuconf/tsinfo.c (asIcmds): Add max-file-time command.
	* trans.c (floop): Check maximum file send time.
	* uuchk.c (ukshow): Print maximum file send time.
	* uucp.texi (File Transfer Control): Document max-file-time.

	* send.c (flocal_send_await_reply): Only seek to the end of the
	file if we are already sending it.

	* trans.c (utransfree): If the file is open, close it.
	* rec.c (flocal_rec_await_reply): Don't bother closing the file on
	error.
	(fremote_send_reply): Likewise.  Set the e field to EFILECLOSED
	after closing it.
	(frec_file_end): Likewise.
	* send.c (fremote_rec_reply): Set the e field to EFILECLOSED after
	closing it.
	(fsend_await_confirm): Likewise.

	* John Hughes: trans.c (struct sreceive_ack): Move definition
	before local function prototypes.
	(utfree_queue): New static function.
	(uclear_queue): Use utfree_queue and utfree_acked.
	(utfree_receive_ack): New static function.
	(uwindow_acked): Use utfree_receive_ack.
	(utfree_acked): New static function.

	* lib/buffer.c: Add MALLOC_BUFFERS case to use malloc/free for
	each buffer, to permit easy use of debugging malloc.

	* chat.c (fcsend): Permit \M and \m in any type of chat script.
	* uucp.texi (Chat Scripts): Document \M and \m here.
	(dial File): Don't document \M and \m here.

	* uuconf/chatc.c (_uuconf_ichat_cmd): Treat chat-program used with
	no arguments as specifying no chat-program.

2002-02-08  Ian Lance Taylor  <ian@airs.com>

	* install-sh: Replace with current version from automake.

	* configure.in: Don't put AC_MSG_WARN for ftime on the same line
	as AC_MSG_RESULT.
	* configure: Rebuild.

	* uuxqt.c (uqdo_xqt_file): If uucp is not a permitted command,
	then reject a uucp command which does not have two arguments.
	(fqforward): Don't crash if zfile is NULL.
